--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-This program was made as a prize winning solution for a programming contest called MobMe CodeJam.It is implemented using regular Hashtable as well as with 
-the BloomFilter data structure.  
+This program was made as a prize winning solution for a programming contest called MobMe CodeJam. 
+It is implemented using regular Hashtable as well as with the BloomFilter data structure.It is inpired from 
+Peter Norvig's work on the same subject, which can be found here -> http://norvig.com/spell-correct.html.  
  
 Dependancies(using Hashtable)
 1. Dictionary used by spellchecker(dictionary.txt)
@@ -7,7 +8,7 @@ Dependancies(using Hashtable)
 3. Input Text File used by spellchecker(inputtext.txt)
 
 Usage
-The source files along with the dependancies have been sent. Compile the source code($javac spellchecker.java) and then run its class($java spellchecker).
+Compile the source code($javac spellchecker.java) and then run its class($java spellchecker).
 
 
 Dependancies(using Bloom Filter)
@@ -17,4 +18,4 @@ Dependancies(using Bloom Filter)
 4. Bloom Filter Class used by spellchecker(bloomfilter12.java)
 
 Usage
-The source files along with the dependancies have been sent. Compile the source code($javac spellchecker12.java) and then run its class($java spellchecker12).
+Compile the source code($javac spellchecker12.java) and then run its class($java spellchecker12).
